# CW_3

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
src/: classes.py  utils.py
tests/: test_utils.py
