[tool.poetry]
name = "cw-3"
version = "0.1.0"
description = ""
authors = ["SvetlanaVasilevckaya25 <vasilevckay@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
